WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209249
AX: VoiceOver and Safari: can't press the play button
https://bugs.webkit.org/show_bug.cgi?id=209249
Summary
AX: VoiceOver and Safari: can't press the play button
chris fleizach
Reported
2020-03-18 14:39:47 PDT
There are many web pages which has play buttton to let visitors to is ten sound in IOS `13.4 betas, VO users can not pres play iron by double tap. we need to double tap and hold instead greate this could have a negative impact in usability.
https://www.applevis.com/blog/garageband-part-3-drummers-and-loops
an example of such a page: <
rdar://problem/60174024
>
Attachments
patch
(5.30 KB, patch)
2020-03-18 17:41 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(5.03 KB, patch)
2020-03-18 20:23 PDT
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
patch
(4.95 KB, patch)
2020-03-18 23:28 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2020-03-18 17:41:14 PDT
Created
attachment 393925
[details]
patch
Darin Adler
Comment 2
2020-03-18 18:28:59 PDT
Comment on
attachment 393925
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=393925&action=review
> Source/WebCore/ChangeLog:11 > + If a node is in a shadowRoot, going up the node parent tree will stop and not check the entire tree for touch event listeners, > + and a touch event won't be dispatched. If we use the accessibility hierarchy we'll be able to cross the shadow root boundary.
We don’t have to switch to the accessibility hierarchy just to deal with shadow. Could just call parentInComposedTree instead of parentNode.
chris fleizach
Comment 3
2020-03-18 18:45:24 PDT
Comment on
attachment 393925
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=393925&action=review
>> Source/WebCore/ChangeLog:11 >> + and a touch event won't be dispatched. If we use the accessibility hierarchy we'll be able to cross the shadow root boundary. > > We don’t have to switch to the accessibility hierarchy just to deal with shadow. Could just call parentInComposedTree instead of parentNode.
ok will give that a try
chris fleizach
Comment 4
2020-03-18 20:23:35 PDT
Created
attachment 393941
[details]
patch
Darin Adler
Comment 5
2020-03-18 20:24:31 PDT
Comment on
attachment 393941
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=393941&action=review
r=me if this works
> Source/WebCore/ChangeLog:11 > + and a touch event won't be dispatched. If we use the accessibility hierarchy we'll be able to cross the shadow root boundary.
Should fix the comment.
chris fleizach
Comment 6
2020-03-18 23:28:31 PDT
Created
attachment 393952
[details]
patch
EWS
Comment 7
2020-03-19 10:45:43 PDT
Committed
r258711
: <
https://trac.webkit.org/changeset/258711
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 393952
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug