Cherry-pick r258711. rdar://problem/60756645

Source/WebCore:
    AX: VO and safari: can't press the play button
    https://bugs.webkit.org/show_bug.cgi?id=209249

    Reviewed by Darin Adler.

    Test: accessibility/ios-simulator/has-touch-event-listener-with-shadow.html

    If a node is in a shadowRoot, going up the node parent tree will stop and not check the entire tree for touch event listeners
    and a touch event won't be dispatched. We need to change to use the parentInComposedTree instead to go up the chain.

    * accessibility/ios/AccessibilityObjectIOS.mm:
    (WebCore::AccessibilityObject::hasTouchEventListener const):

    LayoutTests:
    AX: VO and safari: caan't press the play button
    https://bugs.webkit.org/show_bug.cgi?id=209249

    Reviewed by Darin Adler.

    * accessibility/ios-simulator/has-touch-event-listener-with-shadow-expected.txt: Added.
    * accessibility/ios-simulator/has-touch-event-listener-with-shadow.html: Added.

    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258711 268f45cc-cd09-0410-ab3c-d52691b4dbfc

git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@258854 268f45cc-cd09-0410-ab3c-d52691b4dbfc